# Screener

./: .gitignore  Cargo.toml  README.md  build.sh  dev.n3shemmy3.Screener.json  flatpak-build.sh  meson.build
data/: dev.n3shemmy3.Screener.desktop.in  dev.n3shemmy3.Screener.gschema.xml  dev.n3shemmy3.Screener.metainfo.xml.in  dev.n3shemmy3.Screener.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  main.rs  meson.build  screener.gresource.xml  window.blp  window.rs  window.ui
src/logic/: panel.rs
src/ui/: main.css  panel.blp  window.blp
